--- a/Yelpy/Storyboards/Base.lproj/Main.storyboard
+++ b/Yelpy/Storyboards/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <viewController title="ViewController" id="BYZ-38-t0r" customClass="RestaurantsViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sI2-a9-gMn">
@@ -131,7 +131,7 @@
             <objects>
                 <viewController id="rN9-Mz-HbX" customClass="RestaurantDetailViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mrM-Ga-cj8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="21M-sb-bPn">
@@ -209,13 +209,13 @@
         <!--LoginViewController-->
         <scene sceneID="z1c-61-8Q9">
             <objects>
-                <viewController title="LoginViewController" modalPresentationStyle="fullScreen" id="DlP-oT-hh0" customClass="LoginViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" title="LoginViewController" modalPresentationStyle="fullScreen" id="DlP-oT-hh0" customClass="LoginViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YS1-9A-NVZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="DQM-PJ-kKz" userLabel="username">
-                                <rect key="frame" x="20" y="262" width="335" height="50"/>
+                                <rect key="frame" x="20" y="218" width="232" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ZVe-lO-NBX"/>
                                 </constraints>
@@ -223,7 +223,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mae-xB-Qjb">
-                                <rect key="frame" x="20" y="328" width="335" height="50"/>
+                                <rect key="frame" x="20" y="284" width="232" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="3WX-RI-d5s"/>
                                 </constraints>
@@ -231,7 +231,7 @@
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTi-So-oJ3">
-                                <rect key="frame" x="20" y="398" width="335" height="55"/>
+                                <rect key="frame" x="20" y="354" width="232" height="55"/>
                                 <color key="backgroundColor" red="0.91564136740000002" green="0.083284579220000002" blue="0.1224844232" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="mjS-f8-zJt"/>
@@ -243,16 +243,17 @@
                                 </state>
                                 <connections>
                                     <action selector="onLoginPress:" destination="DlP-oT-hh0" eventType="touchUpInside" id="6UK-6A-eB4"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="sgw-iS-fDA"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please Login to Continue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6BD-Sb-O7K">
-                                <rect key="frame" x="20" y="222" width="335" height="24"/>
+                                <rect key="frame" x="20" y="178" width="232" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Us-95-SyV">
-                                <rect key="frame" x="20" y="74" width="335" height="140"/>
+                                <rect key="frame" x="20" y="30" width="232" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="i0C-tg-gGJ"/>
                                     <constraint firstAttribute="height" constant="140" id="teQ-EI-ZcK"/>
@@ -282,6 +283,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="p9z-wS-fF8"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="p9z-wS-fF8" firstAttribute="trailing" secondItem="0Us-95-SyV" secondAttribute="trailing" constant="20" id="25v-6L-MOu"/>
                             <constraint firstItem="wTi-So-oJ3" firstAttribute="top" secondItem="Mae-xB-Qjb" secondAttribute="bottom" constant="20" id="2Yj-4l-mj6"/>
@@ -300,15 +302,24 @@
                             <constraint firstItem="p9z-wS-fF8" firstAttribute="trailing" secondItem="6BD-Sb-O7K" secondAttribute="trailing" constant="20" id="nLP-H0-fgI"/>
                             <constraint firstItem="p9z-wS-fF8" firstAttribute="trailing" secondItem="wTi-So-oJ3" secondAttribute="trailing" constant="20" id="wSt-yC-w8q"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="2Qk-2H-1KY" appends="YES" id="iFx-Af-vzm"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="mzL-0m-dNa"/>
                     <connections>
                         <outlet property="loginButton" destination="wTi-So-oJ3" id="8Tu-sB-W94"/>
                         <outlet property="password" destination="Mae-xB-Qjb" id="485-ra-5YI"/>
+                        <outlet property="tapGesture" destination="2Qk-2H-1KY" id="pLb-TX-uHv"/>
                         <outlet property="username" destination="DQM-PJ-kKz" id="ehy-7c-yhl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hga-eu-DwG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="2Qk-2H-1KY">
+                    <connections>
+                        <action selector="onTap:" destination="DlP-oT-hh0" id="Qh1-6c-XSn"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="948" y="-809.14542728635683"/>
         </scene>
@@ -348,13 +359,13 @@
         <!--LoginViewController-->
         <scene sceneID="mZV-Tl-SSQ">
             <objects>
-                <viewController title="LoginViewController" modalPresentationStyle="fullScreen" id="1KO-pc-nhG" customClass="SignUpViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignupViewController" title="LoginViewController" modalPresentationStyle="fullScreen" id="1KO-pc-nhG" customClass="SignUpViewController" customModule="Yelpy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8hW-te-sQH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="nWt-RP-fIY" userLabel="username">
-                                <rect key="frame" x="20" y="279.5" width="335" height="50"/>
+                                <rect key="frame" x="20" y="235.5" width="120" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="0Vu-8p-iQN"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="v6h-Eg-baq"/>
@@ -363,7 +374,7 @@
                                 <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES" textContentType="name"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="pD8-Ft-sN8">
-                                <rect key="frame" x="20" y="345.5" width="335" height="50"/>
+                                <rect key="frame" x="20" y="301.5" width="120" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="40d-Pf-0ia"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="mR3-gc-NJc"/>
@@ -384,16 +395,17 @@
                                 </state>
                                 <connections>
                                     <action selector="onSignupPress:" destination="1KO-pc-nhG" eventType="touchUpInside" id="wgl-PK-ccc"/>
+                                    <segue destination="DlP-oT-hh0" kind="show" id="d5I-KT-Qt3"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tik-aJ-v3x">
-                                <rect key="frame" x="20" y="230" width="335" height="33.5"/>
+                                <rect key="frame" x="20" y="186" width="120" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="4n8-bt-RrM">
-                                <rect key="frame" x="20" y="74" width="335" height="140"/>
+                                <rect key="frame" x="20" y="30" width="120" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="55a-3o-zZJ"/>
                                     <constraint firstAttribute="height" constant="140" id="Rrd-zn-GB1"/>
@@ -402,6 +414,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="blG-Rn-ZI6"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="blG-Rn-ZI6" firstAttribute="trailing" secondItem="8PB-2n-J3R" secondAttribute="trailing" constant="20" id="08f-ii-JKT"/>
                             <constraint firstItem="pD8-Ft-sN8" firstAttribute="top" secondItem="nWt-RP-fIY" secondAttribute="bottom" constant="16" id="2uB-LY-bGv"/>
@@ -439,15 +452,24 @@
                             <constraint firstItem="blG-Rn-ZI6" firstAttribute="trailing" secondItem="nWt-RP-fIY" secondAttribute="trailing" constant="20" id="xAM-bY-IYr"/>
                             <constraint firstItem="nWt-RP-fIY" firstAttribute="leading" secondItem="blG-Rn-ZI6" secondAttribute="leading" constant="20" id="xmf-pL-2lX"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="oRy-lC-ErT" appends="YES" id="guf-S0-sAT"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Sign Up" id="Nci-QZ-BXj" customClass="si"/>
                     <connections>
                         <outlet property="password" destination="pD8-Ft-sN8" id="kOE-NL-VkK"/>
                         <outlet property="signupButton" destination="8PB-2n-J3R" id="qNl-pt-DWH"/>
+                        <outlet property="tapGesture" destination="oRy-lC-ErT" id="Kim-Y3-t2f"/>
                         <outlet property="username" destination="nWt-RP-fIY" id="lSZ-US-PRG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="orv-sB-aUU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="oRy-lC-ErT">
+                    <connections>
+                        <action selector="onTap:" destination="1KO-pc-nhG" id="GCn-1y-AbU"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2713" y="-809"/>
         </scene>
@@ -490,6 +512,8 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="guN-JS-Ihf"/>
+        <segue reference="d5I-KT-Qt3"/>
+        <segue reference="sgw-iS-fDA"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="logo-1" width="120" height="120"/>
